versions/0.6/spec.zh.md
# Ktav —— 书面配置格式

**Languages:** [English](spec.md) · [Русский](spec.ru.md) · **简体中文**

> **Informative translation.** 本翻译仅供参考。本规范的规范性版本
> 是同目录下的英文文件 [`spec.md`](spec.md)。如本中文翻译与英文
> 原文有冲突,以英文原文为准。

**版本:** 0.6.4
**日期:** 2026-08-23

## 摘要

Ktav 是一种基于纯文本的配置格式,设计目标是让每一行都能够独立成立,
或仅依赖其上方明确可见的括号。它提供 JSON 的数据形态(标量、数组、
对象、`null`、布尔值),但没有 JSON 的标点符号:字符串无引号、常规
情况下无 escape 序列。嵌套键使用点分路径。多行字符串与单行复合值使
用小巧而清晰的 opt-in 标记。

本文档规定格式 0.6.4 版本的语法与语义。任何编程语言的实现可声明
「Ktav 0.6.4 兼容性」,当且仅当满足以下每一条规范性声明。

0.6.4:键现在处理 escape 序列(§ 3.7);新增 `\.` 与 `\:`;
**破坏性** —— 键中的字面反斜杠现在需要 `\\`。

## 1. 引言

Ktav 文档是一系列行,共同描述一个层级化对象或数组。典型用途是应用
程序配置:由人书写、被程序读取、在版本控制中差异比较。

格式的指导原则:

> **每条规则都是局部的。每一行的含义要么自明,要么仅依赖于上方
> 可见的括号。**

这排除了缩进敏感(YAML)、尾部逗号约束(JSON)、锚点与别名(YAML)、
跨多行的 heredoc 标记等。

相比 0.1.x,版本 0.6.4:

- 移除了类型标记 `:i` 和 `:f`。数字、布尔、`null` 从标量字面形式
  推断。`::` 原始标记保留用于在需要时强制为 String。
- 新增**单行复合值**(inline compounds)—— `{key: value, key2: value}`
  与 `[v1, v2, v3]`,可作为值,也可作为整个文档。
- 将单 `#` 注释改为**双 `##`** 注释,且必须独占一行。单 `#`
  现在是普通字符。

相比 0.5.0,版本 0.6.4:

- 键现在处理完整的 escape 序列集(§ 3.7)。两个新 escape —— `\.`
  (字面点)与 `\:`(字面冒号)—— 允许键段包含先前为结构性的字符。
  **破坏性:** 键中的字面反斜杠现在需要 `\\`。

## 2. 约定

本文档中关键词 **MUST**、**MUST NOT**、**SHOULD**、**SHOULD NOT**、
**MAY** 在大写时按 RFC 2119 解释(译作「必须」、「不得」、「应」、
「不应」、「可」)。小写形式则为日常英语。

## 3. 词法结构

### 3.1 字符集

Ktav 文档是以 UTF-8 编码的 Unicode 码点序列。实现 MUST 拒绝非
UTF-8 文档。

### 3.2 行

行终止符是以下三种字节序列之一:

- `LF` (`0x0A`)
- `CR` (`0x0D`)
- `CR LF` (`0x0D 0x0A`)

实现 MUST 将这三者视为等价的行终止符。文档 MAY 最后一行没有终止符。

`CR` 字节在解析时绝不出现为内容字节:它始终是终止符(单独或与紧随的
`LF` 配对)。String 值仅能通过 inline 标量(§ 3.7、§ 5.8)中的 `\r`
转义序列携带 `CR` 字节;此类 Value 在规范形式中不可表示(§ 5.9.7)。

在单行复合值内(§ 5.8),解析器 MUST 不跨越行终止符:在行末未关闭
的单行复合值是错误(§ 6.11)。

### 3.3 空白

ASCII 空格 (`0x20`) 与水平制表符 (`0x09`) 是**空白**字节。实现
MAY 额外将其他 Unicode `White_Space` 字符视为空白;可移植文档
SHOULD 仅使用空格与制表符。

行首空白是**缩进**,仅对人类可读性有意义;解析器忽略之(除非用作
行内 token 的分隔符)。行内 token 中的空白以及单行复合值分隔符
周围的空白在语法允许的位置都是可选的(§ 4);实现 MAY 输出带显式
单空格分隔符的规范格式。

### 3.4 注释

**注释**是其首个非空白字节为 `##`(两个 ASCII `#` 字节)的行。直到
并包括行终止符的其余部分为注释体。注释不产生 Value,被忽略。

单个 `#` 字节没有特殊含义:不以 `##` 开头的行中,`#-prefixed` 文本
是普通的标量 / 键字符。

注释 MUST 独占一行;不支持行末追加注释。由于注释仅在 trim 后行首
被识别,值、键或其他内容**中间**的字面字节对 `##` 仅是两个 `#`
字符,无需 escape —— 0.6.4 没有 `\#` 转义序列。

### 3.5 空白行

**空白行**是仅由空白字节构成的行。空白行不产生 Value 且被忽略,
但多行字符串中的内容除外(§ 5.6)。

### 3.6 数字字面量

**整数字面量**符合如下语法(`*` 零或多,`+` 一或多,`?` 可选,
`|` 选一):

```
integer        ::= sign? ( hex | oct | bin | dec )
sign           ::= "+" | "-"
hex            ::= "0x" hex_digit (("_")? hex_digit)*
oct            ::= "0o" oct_digit (("_")? oct_digit)*
bin            ::= "0b" bin_digit (("_")? bin_digit)*
dec            ::= dec_digit (("_")? dec_digit)*
hex_digit      ::= [0-9a-fA-F]
oct_digit      ::= [0-7]
bin_digit      ::= [0-1]
dec_digit      ::= [0-9]
```

下划线分隔符在两个相邻数字**之间**允许。前导下划线、尾部下划线、
两个连续下划线,以及紧跟基数前缀的下划线 (`0x_`, `0o_`, `0b_`),
使字面**不再**是整数;文本形式按 § 5.2 回退为 String。

**浮点字面量**符合以下两个候选之一:

```
float          ::= sign? dec_part "." dec_part exponent?
                 | sign? dec_part exponent
dec_part       ::= dec_digit (("_")? dec_digit)*
exponent       ::= ("e" | "E") sign? dec_part
```

第一个候选要求小数点以及点两侧的数字(指数可选)。第二个候选要求
指数(无小数点)。纯数字串(无 `.`、无指数)是整数(上),不是浮点。
`1.`、`.5`、`1.2.3`、`1e`、`1e+` 等形式不符合任一候选,回退为
String。

### 3.7 Escape 序列

**inline 标量值**(在单行复合值 § 5.8 中出现的对值或数组项的值)
以及**键**(对中的键部分,§ 5.3)内,反斜杠字节 `\` 开始一个
**escape 序列**。识别以下**十个** escape 序列;每个在进一步分类
(§ 5.2,用于值)或键段分割(§ 4,用于键)之前替换为指定字节:

| 序列 | 替换 |
|----------|-------------|
| `\\`     | `\` |
| `\,`     | `,` |
| `\}`     | `}` |
| `\]`     | `]` |
| `\{`     | `{` |
| `\[`     | `[` |
| `\n`     | LF (`0x0A`) |
| `\r`     | CR (`0x0D`) |
| `\.`     | `.` (字面点 —— 不分割键段) |
| `\:`     | `:` (字面冒号 —— 不作为键/值分隔符) |

四个括号转义形式(`\}`、`\]`、`\{`、`\[`)出于对称性而存在:任何
能够打开或关闭 inline 复合值的字节都有显式的字面形式。`\{` 与
`\[` 最有用的位置是 inline 标量值的*开头* —— 那里未转义的 `{`
或 `[` 会打开嵌套复合值 —— 但解析器在 inline 标量上下文的
任何位置都接受它们。

两个新的面向键的 escape(`\.`、`\:`)允许键段包含字面的点或冒号
—— 否则这些字符是结构性的(点分割路径段;冒号分割键与值)。例:
`a\.b: v` 产生平坦键 `a.b`,值 `v`(无嵌套);`a\:b: v` 产生键
`a:b`。

其他任何 `\X` 形式(包括 `\#`、`\t`、`\<空格>`、
`\<其他任意>`)是 `BadEscapeSequence` 错误(§ 6.13)。

Escape 序列**不**在以下场景处理:

- 多行标量值(占整行内容的对体或数组项体,§ 5.3 / § 5.4)。
- 多行字符串内容(`(…)` 与 `((…))`,§ 5.6)—— 内容 verbatim。
- 注释(§ 3.4)—— 内容被忽略。

无 escape 处理的上下文中,`\X` 字面字节序列为两个字符。

## 4. 语法

(中文翻译省略详细 BNF,见英文 `spec.md` § 4。)

要点:
- 注释:`(ws) "##" (任意字节到行尾)`。
- pair-line:`<key> ":" <sep-end> <value>` 或 `<key> "::" <sep-end> <value>`。
- **`<sep-end>` 要求**:多行 pair-line 中 `:` / `::` 之后 MUST
  紧跟至少一个空白字节(空格 / 制表符)**或**行末;`key:value`
  / `key::value`(无空白且 body 在同一行)是
  `MissingSeparatorSpace` 错误(§ 6.10)。此规则**不**适用于
  inline 复合值(§ 5.8)内的对分隔符 —— 那里空白处处可选。
- `<key>` 语法现在 escape 感知:
  ```
  <key>           ::= <segment> ( <unescaped-dot> <segment> )*
  <unescaped-dot> ::= 非由奇数个 "\" 前导的 "."
  <segment>       ::= <key-token>+
  <key-token>     ::= <key-escape> | <key-char>
  <key-escape>    ::= "\" <escapable-byte>
  <escapable-byte>::= "\" | "," | "}" | "]" | "{" | "[" | "n" | "r"
                     | "." | ":"
  ```
  `<key-char>`:任意 UTF-8 码点,但不允许 ASCII 控制字节 < 0x20
  (制表符 0x09 除外)、DEL (0x7F)、行终止符、`[` `]` `{` `}`
  `(` `)` `:` `,`、`\`(反斜杠 —— 现为 escape 前导,§ 3.7)、
  `.`(点 —— 现为路径分隔符;用 `\.` 表示段内字面点)。
  ASCII 空格 (0x20) 与制表符 (0x09) **允许** 在键段内出现,因此键
  可包含内部空白(例如 `first name`)。
- **键段修剪**:键段在 `<key-token>+` 校验前被**修剪**掉前后的
  ASCII 空白字节(空格 0x20、制表符 0x09)。段内空白 verbatim
  保留。修剪后为空的段为 `EmptyKey`(§ 6.5)。
- **键 escape 处理**:`<key-escape>` 规则处理与 § 3.7 相同的十个
  escape 序列。反斜杠 `\` 是 escape 前导;`\.` 产生字面点(不分
  割路径段);`\:` 产生字面冒号(不作为对分隔符);`\\` 产生字面反
  斜杠。键中其他 `\X` 形式为 `BadEscapeSequence` 错误(§ 6.13)。
- 对分隔符为从左到右扫描到的首个**未 escape** 的 `:`(或 `::`)。
  escape 后的冒号 `\:` 属于键段,不是分隔符。
- 点分路径分割仅在**未 escape** 的 `.` 字节处进行。键中的 `\.` 是
  当前段内的字面点。
- 示例:
  - `a\.b: v`     → 键 "a.b",值 "v"(平坦,无嵌套)
  - `a\:b: v`    → 键 "a:b",值 "v"
  - `a\:: v`     → 键 "a:",值 "v"(escape 冒号,然后是普通的 `:` 分隔符)
  - `x.y\.z: v`  → 路径 ["x", "y.z"],值 "v"({"x": {"y.z": "v"}})
  - `path\\to: v` → 键 "path\to",值 "v"
- value-start 可为 `{}`、`[]`、`()`、`(())`、`{...}` (inline)、
  `[...]` (inline)、`{`(多行打开)、`[`(多行打开)、`(`(多行字符串
  stripped)、`((`(多行字符串 verbatim)、或 `<scalar-body>`。
- inline-pair-list:`<inline-pair> ("," <inline-pair>)* ","?` —— 允许
  尾部逗号。
- inline-item-list:同上,但元素是 `<inline-value>`。
- inline-scalar:延伸至首个未 escape 的 `,` / `}` / `]` 或行末。
- `<inline-value>` 的判别按 inline 值位置上**首个非空白字节**:
  `{` → 嵌套 inline 对象(MUST 同行 `}` 关闭);`[` → 嵌套 inline
  数组;其他 → `<inline-scalar>`。决定一次性作出 —— 之后 inline
  标量内的 `{` / `[` 字节均为字面数据(§ 5.8.5)。
- multi-line content 不在 inline 内出现。

## 5. 语义

合规解析器为合规文档产生一个 **Value**。Value 是以下之一:**Null**、
**Bool**、**Integer**、**Float**、**String**、**Array**、**Object**。

- **Null** —— 唯一的空值。
- **Bool** —— `true` 或 `false`。
- **Integer** —— 数值标量,携带整数值。实现 MUST 至少支持 i64
  范围 (-2^63 .. 2^63 - 1) 且 MAY 支持更宽范围(如任意精度)。
  Integer 的规范文本形式为基-10 十进制串,无下划线、无前导零
  (`0` 除外);前导 `+` 舍弃;有符号零 (`+0`, `-0`) 归一化为
  `0`。规范形式由 writer-conforming 实现使用(§ 5.9)。
- **Float** —— 数值标量,携带数值。内部表示由实现定义(IEEE 754
  binary64、任意精度 decimal 或其他)。规范文本形式(§ 5.9)
  MUST 由 writer-conforming 实现使用。Value **不**保留写入的文本
  形式;下划线、`e` vs `E` 的选择、前导 `+` 不属于 Value。
- **String** —— (可能为空的) UTF-8 字符串。
- **Array** —— 有序 Value 序列。
- **Object** —— 有序 (名, Value) 对序列,名为字符串。Object 内
  名字必须唯一(§ 5.5)。

解析文档产生的根 Value 是 **Object** 或 **Array**(均可为空)。
根的类型由文档的首条内容行决定 —— 见 § 5.0.1。

### 5.0.1 顶层类型的判定

「首条内容行」即既非空白(§ 5.1 规则 1)亦非注释(§ 5.1 规则 2)
的第一行。根按此行判定。规则按顺序应用;首条匹配规则胜出。

1. 若文档**无内容行**(空文档,或仅含空白/注释)→ 根为空 **Object**。
2. 若首条内容行经 trim 后为**闭合 inline 对象** `{ … }`(同一行
   内有平衡内容,匹配的 `}` 为 trim 后行末非空白字节)→ 根**就是**
   该 inline Object。文档 MUST 无其他内容行;任何后续的非空白
   非注释行都是 `OrphanLineAfterTopLevelInline` 错误(§ 6.14)。
3. 若首条内容行经 trim 后为**闭合 inline 数组** `[ … ]`(同一行
   内有平衡内容,匹配的 `]` 为 trim 后行末非空白字节)→ 根**就
   是**该 inline Array。文档 MUST 无其他内容行;任何后续的
   非空白非注释行都是 `OrphanLineAfterTopLevelInline` 错误
   (§ 6.14)。
4. 若首条内容行经 trim 后为**单独的 `{`**(仅开启大括号,可能前
   后有空白)→ 根为**多行 Object**,由此括号开启。其匹配的 `}`
   在后续行关闭根;关闭行之后的任何内容是
   `OrphanLineAfterTopLevelInline`(§ 6.14)。
5. 若首条内容行经 trim 后为**单独的 `[`** → 根为**多行 Array**,
   由此括号开启。其匹配的 `]` 关闭根;关闭行之后的内容是
   `OrphanLineAfterTopLevelInline`(§ 6.14)。
6. 否则,若首条内容行经 trim 后是 **pair line**(§ 5.3,即
   `key: …` / `key:: …`,含点分键)→ 根为 **Object**,此行为首对。
7. 否则,若首条内容行经 trim 后被识别为 **array-item line**
   (§ 5.4,除规则 4 / 5 已处理者外)—— 裸标量、`:: …`、多行字符串
   开启符 `(` / `((`、空复合简写 `{}` / `[]` / `()` / `(())`,或
   未匹配规则 2 / 3 的闭合 inline 复合 —— → 根为 **Array**,此
   行为首项。
8. 否则(裸闭合 `}` / `]` 或不可分类)→ `UnbalancedBracket` 错误
   (§ 6.1)。

根类型由首条内容行**固定**。

说明(vs. 0.1.1):规则 4 与 5 与早期版本不同。0.1.1 中,首条内容
行的单独 `{` 或 `[` 在根级 Array 内打开一个 Object / Array 项;
0.5.0 中单独开启符即为根本身:整篇文档是一个多行 Object / Array,
无外包 Array。JSONL 式形式(多个 top-level inline 对象 `{a:1}`
后跟 `{b:2}` 产生根 Array)不再被接受。

### 5.1 逐行分发

解析器 MUST 在 trim 之后对每行进行分类,严格按以下顺序应用规则:

1. 经 trim 行为空 → 空白行;无效果(§ 5.6 除外)。
2. 经 trim 行以 `##` 开头 → 注释;忽略(§ 3.4)。
3. **解析器处于已开启的多行字符串中**(§ 5.6):若经 trim 行等于
   块终止符,则关闭多行字符串;否则将原始(未 trim)行加入多行
   字符串内容。
4. 若为文档的首条内容行,根类型按 § 5.0.1 设置;随后以同行进入
   对应类型的分发(规则 5–8)。
5. 经 trim 行恰为 `}` → 关闭最内层开启 Object,否则报错(§ 6.1)。
6. 经 trim 行恰为 `]` → 关闭最内层开启 Array,否则报错(§ 6.1)。
7. 若最内层开启复合是 Array 或无开启而根为 Array:将该行视为
   **array-item line**(§ 5.4)。
8. 若最内层开启复合是 Object 或无开启而根为 Object:将该行视为
   **pair line**(§ 5.3)。

### 5.2 标量值解释

给定**标量体** —— 经 trim 后的文本,来自 pair-line 在 `:` 之后,
或来自 inline 标量在 escape 处理(§ 3.7)之后,或来自无标记的
array-item line。解析器按顺序分类;首个匹配规则胜出。`::` 之后的体
**不**经 § 5.2;按 § 5.3 / § 5.4 / § 5.8 当作原始 String 处理。

1. 体恰为 `{` → 打开新的 Object scope(多行)。
2. 体恰为 `[` → 打开新的 Array scope(多行)。
3. 体恰为 `(` → 打开多行字符串(stripped,§ 5.6)。
4. 体恰为 `((` → 打开多行字符串(verbatim,§ 5.6)。
5. 体为 `()` 或 `(())` → 空 String。
6. 体匹配**闭合 inline 对象** `{ … }` → 按 § 5.8 产出 inline Object。
7. 体匹配**闭合 inline 数组** `[ … ]` → 按 § 5.8 产出 inline Array。
8. 体以 `{` 开头但不符合规则 1 或 6 → 未终止 inline 对象错误
   (§ 6.11)。
9. 体以 `[` 开头但不符合规则 2 或 7 → 未终止 inline 数组错误。
10. 体恰为 `null` → Null。
11. 体恰为 `true` → Bool `true`。
12. 体恰为 `false` → Bool `false`。
13. 若体匹配**整数字面量**语法(§ 3.6)且数值至少落在 i64 范围内
    (-2^63 .. 2^63 - 1,即 -9_223_372_036_854_775_808 ..
    9_223_372_036_854_775_807):Integer(Value 文本 = 规范十进制
    归一化)。实现 MAY 支持更宽范围(例如 bignum / 任意精度);
    超出实现支持范围的值回退到规则 15(String)。为保证互操作,
    可移植文档 SHOULD NOT 依赖于 i64 范围之外的 Integer 类型化;
    运行于严格 i64 后端的 0.6.4 解析器 MUST 将这类溢出体归入
    规则 15。
14. 若体匹配**浮点字面量**语法(§ 3.6):Float,携带从体解析的
    数值。内部表示由实现定义(见 § 5);规范文本形式见 § 5.9.8。
15. 否则 → String,内容为写入的体。

关键词 `null`/`true`/`false` 与数字字面量**区分大小写**。`True`、
`NULL`、`False`、`0xZZ`、`0o9` 等形式为 String。

本节的标量分类是经 trim、经 escape 处理后字节序列的确定性函数。
两个 parser-conforming 实现 MUST 对同一体产生相同的 Value kind。

### 5.3 Pair 行

形式:

```
key: value
key:: literal-string-value
```

详见英文。键由未 escape 的点分割的**段**(`key-token+`)组成,
每段不为空。键现在**escape 感知**(§ 3.7、§ 4):`\` 是 escape
前导;`\.` 产生字面点(非路径分隔符);`\:` 产生字面冒号(非对
分隔符);`\\` 产生字面反斜杠。其他 `\X` 形式为
`BadEscapeSequence` 错误。`#` 单字符在段内允许;`##` 仅在 trim
行首构成注释标记。对分隔符为首个**未 escape** 的 `:`(或 `::`)。

`<sep-end>` 要求 `:` / `::` 之后至少一个空白字节或行末;
`key:value` / `key::value` 是 `MissingSeparatorSpace` 错误(§ 6.10)。
此规则**不**适用于 inline 对内的分隔符(§ 5.8)。

#### 5.3.1 键校验

`InvalidKey`(§ 6.4)/ `EmptyKey`(§ 6.5)。

#### 5.3.2 点分键展开

`a.b.c: v` ≡ `a:` Object 含 `b:` Object 含 `c: v`。每中间名 MUST
解析为 Object;否则 `KeyPathConflict`(§ 6.3)。inline 对象中同样
展开:`{a.b: 1, a.c: 2}` → `{a: {b: 1, c: 2}}`。

### 5.4 Array-Item 行

形式:

1. **原始标记项** `:: literal`。
2. **闭合 inline 对象项** `{ … }`。
3. **闭合 inline 数组项** `[ … ]`。
4. **空 inline 对象项** `{}`。
5. **空 inline 数组项** `[]`。
6. **开启复合** 单独的 `{` / `[` / `(` / `((`。
7. **空多行字符串项** `()` / `(())`。
8. **其他值** —— 任意非标记体,经 § 5.2 分发。
9. **裸标量项** —— 落入规则 8 的 String 结果。

### 5.5 重复名称

`DuplicateKey`(§ 6.2)。

### 5.6 多行字符串

由 `(` (stripped) 或 `((` (verbatim) 开启;由独占行的 `)` 或 `))`
关闭。

- **stripped (`( … )`)**:计算非空内容行的最小前导空白并从每行去除;
  各行以单个 `\n` 连接。**每行的尾部空白保留**;块内的空白行作为
  空字符串贡献到连接结果。
- **verbatim (`(( … ))`)**:逐字节以单个 `\n` 连接内容行,不做空白
  剥除。

#### 5.6.1 关闭符在内容中的限制

stripped 块内不能有内容行 trim 后恰为 `)`;verbatim 同样不能恰为
`))`。需使用另一种形式。

解析器行为对称:若 stripped 块内某内容行 trim 后恰为 `)`,解析器
MUST 在该行关闭块;若 verbatim 块内某内容行 trim 后恰为 `))`,
亦同。写入端因此 MUST 遵守上述规则 —— 若要表达此类内容,
多行字符串必须切换为另一种形式。

### 5.7 空复合值的快捷形式

| 序列 | Value |
|----------|-------|
| `{}`     | 空 Object |
| `[]`     | 空 Array |
| `()`     | 空 String |
| `(())`   | 空 String |

### 5.8 Inline 复合值

**inline 复合值**是写在单行上的 Object 或 Array。Object 由 `{` /
`}` 包围,Array 由 `[` / `]` 包围。内部元素以 `,` 分隔。尾部逗号
允许:

```
{a: 1, b: 2}
{a: 1, b: 2,}        ; 尾部逗号 OK
[1, 2, 3]
[1, 2, 3,]
```

#### 5.8.1 空白

inline 复合值内空白处处可选:

```
{a: 1, b: 2}         ; 规范
{ a : 1 , b : 2 }    ; 同一 Value
{a:1,b:2}            ; 同一 Value
```

inline 标量值在按 § 5.2 分类前两侧空白被**修剪**。

#### 5.8.2 对

inline 对为 `key: value` 或 `key:: value`。语义同 § 5.3:

- 普通 `:` 通过 § 5.2 分发。
- 原始 `::` 视值为字面 String,但**escape 序列仍被处理**(§ 3.7)。

空值(`{a:}`、`{a::}`)是空 String。这是有意为之:显式的空对值
在语义上是有意义的(「显式为空」字段),形式也很紧凑。

#### 5.8.3 项

inline 数组项为任意 `<inline-value>`。inline 标量在 escape 处理后
通过 § 5.2 分发。

**空 inline 数组项** —— 期望一个项但无任何字节的位置,如两个逗号
之间的体(`[a,, b]`)或开启符紧后(`[, a]`)—— **不是**空 String,
而是 `MalformedInlineCompound` 错误(§ 6.12)。与对的空值
(§ 5.8.2)的不对称是有意的:对的空值有显式键作锚,故「键 X
的空值」意图明确;数组空项无此锚,故视为笔误,而不是有效的空
String 项。

闭合符之前的单个尾部逗号(`[a, b,]`、`{a: 1, b: 2,}`)是公认的
尾部逗号,而**不是**空项(§ 5.8)。

#### 5.8.4 嵌套 inline 复合值

inline 值可以自身是 inline 复合值:

```
{outer: {inner: {leaf: 1}}}
[ [1, 2], [3, 4] ]
{users: [ {name: alice}, {name: bob} ]}
```

嵌套深度由实现定;可移植文档 SHOULD 低于 64 层。

#### 5.8.5 inline 复合值不能包含

- 多行字符串(`(` / `((` 开启符)。
- 多行作用域变更。`{` / `[` 作为 inline 值首字符开启 *嵌套 inline
  复合值*,MUST 在同行关闭。

**不**是 inline 值首个非空白字节的 `{` / `[` 是字面字符,**不**
打开嵌套复合值。解析器在开始读取 inline 值时做一次性决定:首个
非空白字节为 `{` / `[` 时,值为嵌套复合值;否则值为 inline 标量,
延伸至下个未转义的 `,` / `}` / `]`(或行末 —— § 6.11 错误)。在该
inline 标量内,后续的 `{` / `[` 字节均为字面数据,无结构意义。例:

```
{a: hello{world, b: x}
```

得到 `{a: "hello{world", b: "x"}`。外层 `}` 关闭外层对象;`hello{world`
中部的 `{` 是 String 的一部分。`[` 在值的中部亦同。`\{` / `\[`
(§ 3.7)仅在字面括号需作为 inline 值首字节时使用。

#### 5.8.6 顶层检测

首条内容行 trim 后为 `{ … }` 或 `[ … ]` 且同行平衡闭合的文档为
**顶层 inline 复合值**(§ 5.0.1 规则 2–3)。inline 体**就是**根
Value;不允许其他内容行。

### 5.9 规范形式

**writer-conforming** 实现 MUST 对任何 Value 输出*规范* Ktav
序列化。规范形式是字节确定性的:对任何给定 Value,所有
writer-conforming 实现 MUST 产生相同的字节序列。

#### 5.9.1 空白、缩进、行尾

- 行仅以 `LF` (`0x0A`) 终止;绝不使用 `CR` 或 `CR LF`。规范输出中
  绝不出现 `CR` 字节。
- 缩进为每个嵌套级别恰好 4 个 ASCII 空格(无制表符)。
- 文档以单个尾部 `LF` 结束,空文档(根为无对的空 Object)除外,
  其输出零字节。

#### 5.9.2 注释

注释(以 `##` 开头的行)永不输出。原始输入中的注释不是 Value
模型的一部分,无规范表示。

#### 5.9.3 文档根

- **空 Object 根:** 规范形式为空文件(零字节)。不输出 `{}`。
  (按 § 5.0.1 规则 1 反向解析 —— 无内容行。)
- **空 Array 根:** 规范形式为单行 `[]` 后接 `LF`。(按
  § 5.0.1 规则 3 反向解析 —— 首条内容行的闭合 inline 数组。)
- **有对的 Object 根:** 每对在自己的行上,缩进级 0;根处无大
  括号。
- **有项的 Array 根:** 每项在自己的行上,缩进级 0;根处无方括号
  —— **除非**首项本身在 § 5.0.1 中会被识别为根开启符 —— 单独的
  `{`(规则 4)或单独的 `[`(规则 5)。在此消歧情形下,writer
  用显式括号包裹根:`[` 在缩进 0 的自身行,各项在缩进 + 1(4
  空格),`]` 在缩进 0 的自身行。

说明:Object 对行不会被误识为单独的开启符(总有 `:` 分隔符);
仅当首项为非空复合值时,Array 根才需要包裹。

#### 5.9.4 复合值(非根)

- **非空 Object 值:** `key: {` 后接换行、每对在缩进 + 1 的行上、
  关闭 `}` 在当前缩进的自身行上。
- **非空 Array 值:** `key: [` 后接换行、每项在缩进 + 1 的行上、
  关闭 `]` 在当前缩进的自身行上。
- **空 Object 值:** `key: {}` 单行。
- **空 Array 值:** `key: []` 单行。
- 除空 `{}` / `[]` 外,inline 复合值**绝不**以规范形式输出。

#### 5.9.5 对分隔符

对分隔符由值的类型/内容选择:

- **`key:`(冒号后无体)** 当值为空 String `""`。
- **`key: <bytes>`(常规 + 一个空格 + 标量体)** 当值是非空 String,
  其体不含 `LF`/`CR`、无前后空白、无控制字节(0x00–0x1F 除
  0x09 `TAB`)、不会被 § 5.2 分类为 String 以外(number /
  `null` / `true` / `false`),且不以 `{` 或 `[` 开头(否则
  § 5.2 会将体派发为 inline 复合值而非 String)。
- **`key:: <bytes>`(原始标记)** 当体本应被 § 5.2 重解释 ——
  作为数字 / `null` / `true` / `false`、作为 inline 复合值
  (以 `{` 或 `[` 开头),或任何其他非 String 分类。
- **`key: <multi-line>`** 当值是含 `LF`、`CR`、前后空白或非打印
  控制字节的 String(见 § 5.9.7)。
- **`key: <compound>`** 当值为非空 Object / Array(§ 5.9.4)或
  空 `{}` / `[]`。

#### 5.9.6 数组项标记

- **裸标量项:** `<bytes>` 在当前缩进的自身行上 —— 当体满足
  § 5.9.5 中 `key: <bytes>` 形式的相同条件(包括:不以 `{` 或
  `[` 开头)。
- **原始标记项:** `:: <bytes>` —— 当体本应被 § 5.2 重解释为数字、
  关键词或 inline 复合值。
- **空 Object 项:** `{}` 在自身行上。
- **空 Array 项:** `[]` 在自身行上。
- **非空 Object 项:** `{` 开启行,体行在缩进 + 1,`}` 关闭行。
- **非空 Array 项:** `[` 开启行,体行在缩进 + 1,`]` 关闭行。
- **多行字符串项:** verbatim 开启行 `((` 在当前缩进,体行在
  缩进 0(无前导空白 —— verbatim 精确保留字节;任何缩进会被
  注入值),`))` 关闭行在当前缩进。

#### 5.9.7 String 形式选择

设 *body* 为 String Value 的字节序列。

- **空 String (`""`)**:对输出 `key:`(冒号后无体);数组项输出
  `::`(无体)。
- **单行可打印,无边缘空白,无 number/keyword 冲突**:对输出
  `key: <body>`;项输出 `<body>`。
- **单行,但本应被分类为 Number / `null` / `true` / `false`**:
  使用原始标记输出 `key:: <body>` 或 `:: <body>`。
- **含 `LF`、前后空白或控制字节(`0x00`–`0x1F` 除 `0x09` `TAB`
  与 `0x0A` `LF`)**:输出为 verbatim 多行 `((` … `))`。开启
  `((` 在值行上输出(对前缀 `key: `,项单独),位于当前缩进。
  体按 `LF` 切分;每段以一行的形式在**缩进 0**(无前导空白 ——
  verbatim 精确保留字节,任何缩进会被注入值)输出。关闭 `))` 在
  自身行上、当前缩进输出。
- **含 `CR` 字节(`0x0D`)**:Value 在规范形式中**不可表示**。
  String 中的 `CR` 字节只能通过 inline 复合值内的 `\r` 转义
  (§ 3.7)生成,而规范形式从不为非空标量输出 inline 复合值。
  Writer-conforming 实现 MAY 为此类 Value 输出任意确定性编码
  (或拒绝),§ 8.3 的 round-trip 性质不成立。可移植文档
  SHOULD NOT 在 String 值中依赖 `CR` 字节。

规范 writer 对需要多行表示的字符串优先 verbatim 多行 `((` …
`))`。若体的某个段(按 `LF` 切分后)恰为 `))`,则 verbatim 形式
不可能(该段会关闭块);此时规范 writer MUST 切换到 stripped
形式 `(` … `)`,无前导缩进(writer 在缩进 0 输出体段,使公共缩
进计算为零)。关闭的 `)` 行在外层缩进。

(理由:stripped 形式的 `)` 关闭符让 `))` 可作为内容,此为多行
值中表达该字节序列的唯一方式。)

体同时需要两种形式 —— 既有 `))` 段又有 `)` 段 —— 的 String
不能以规范多行形式表示;实现 MAY 输出任一形式,接受 round-trip
性质对此病态值不严格成立。

#### 5.9.8 数字规范化

- **Integer**:基 10 十进制。前导 `+` 舍弃。`-0` 与 `+0` 输出
  为 `0`。无下划线。无前导零(`0` 字面除外)。负值保留减号。
- **Float**:选取的文本形式匹配 § 3.6 的两个候选之一:
  - `sign? digits "." digits ("e" sign? digits)?`
  - `sign? digits "e" sign? digits`

  仅小写 `e`。下划线去除。尾数前导 `+` 舍弃。指数前导 `+` 舍弃
  (正指数无符号)。

  首先使用 Ryu / Grisu / Steele-White 类算法计算能唯一确定 Value
  的最短十进制展开。对于 IEEE 754 binary64,这是能 round-trip 到同一
  binary64 的最短十进制。然后按以下确定性策略选择表示形式,其中
  `abs` 是数值的绝对值:

  - 若 `abs < 1e-2` 或 `abs >= 1e7`,使用指数形式;
  - 否则使用 `digits "." digits` 形式。

  边界是精确的:`0.01` 与 `9999999.0` 使用十进制形式,而 `0.001`、
  `0.0015`、`-0.001` 与 `10000000.0` 使用指数形式。科学形式使用小写
  `e`,省略正指数的加号,并去掉尾数末尾的 `.0`;因此输出为 `0.01`、
  `1e-3`、`1.5e-3`、`-1e-3`、`9999999.0` 与 `1e7`。

  使用相同 Float 表示(binary64)的两个 writer-conforming 实现
  对同一 Value MUST 产生相同输出。fixture `*.canonical.ktav`
  假定 binary64 语义。

#### 5.9.9 关键词

`null`、`true`、`false` —— 小写,如示。

#### 5.9.10 键

键段在 escape 处理与 § 4 trim 后输出。段内空白保留。点分键
**不**反展开:从 `a.b.c: 1` 解析得到的 Value 在 Value 模型中与
从 `a: { b: { c: 1 } }` 得到的不可区分,规范 writer 选择显式
嵌套形式。

输出键段时,writer MUST 对以下字节重新 escape:

- `\` → `\\`(反斜杠是 escape 前导)
- `.` → `\.`(点是路径分隔符)
- `:` → `\:`(冒号是对分隔符)

这确保规范输出能够 round-trip:规范键中未 escape 的点仅为路径
分隔符。包含字面 `.`、`:` 或 `\` 的键段以 escape 形式输出,使
重解析产生相同键。

例:键 `a.b`(含字面点的单段)输出为 `a\.b`;键 `a:b` 输出为
`a\:b`。

#### 5.9.11 顺序

Object 对按插入顺序输出 —— 解析输入中出现的顺序或 Value 构造的
顺序。实现 MUST 保留并输出此顺序。Array 项按自然数组顺序输出。

## 6. 错误

合规解析器 MUST 检测并报告以下每个错误类别。错误 MUST 至少携带
1-based 源行号与字节偏移 Span。

### 6.1 不平衡或不匹配的括号

`UnbalancedBracket` / `UnclosedCompound`。

### 6.2 重复名称

`DuplicateKey`(§ 5.5)。

### 6.3 路径冲突

`KeyPathConflict`(§ 5.3.2)。

### 6.4 无效键

`InvalidKey`。

### 6.5 空键

`EmptyKey`。

### 6.6 缺失分隔符

`MissingSeparator` —— 派发到 pair-line 模式但无 `:` 分隔符的行。
适用于打开的多行 Object 体内,或顶层根为 Object 时。

### 6.7 (保留)

原:Inline non-empty compound。0.5.0 内 inline non-empty 复合值
有效(§ 5.8)。实现 MUST NOT 在解析 0.6.4 文档时输出标签为
`InlineNonEmptyCompound` 的错误。

### 6.8 I/O 错误

`Io`。

### 6.9 (保留)

原:Invalid typed scalar。0.5.0 内类型标记不再存在。实现
MUST NOT 在解析 0.6.4 文档时输出标签为 `InvalidTypedScalar`
的错误。

### 6.10 分隔符后缺失空格

多行 pair line 内,`:` / `::` MUST 后接至少一个空白字节或行末。
inline 对(§ 5.8)**不**要求且**不**报此错误。

### 6.11 未终止 inline 复合值

`UnterminatedInlineCompound`(§ 5.8)。

### 6.12 inline 复合值结构缺陷

闭合 inline 复合值内部不归入 `UnterminatedInlineCompound` 的结构
缺陷,是 `MalformedInlineCompound` 错误。覆盖情况:

- 开启符紧后的前导逗号(`{,a: 1}`、`[,1, 2]`)。
- 两个或更多连续逗号(`{a: 1,, b: 2}`、`[1,, 2]`)。
- 空 inline 数组项(`[a,, b]`);§ 5.8 关于闭合符前单个尾部逗号
  的例外仍适用。
- 其他不引发 `UnterminatedInlineCompound` 的结构缺陷(如 inline
  对象内缺失对分隔符:`{a 1, b: 2}`)。

对的空值(`{a:}`、`{a::}`)**不**是缺陷;按 § 5.8.2 为空 String。

### 6.13 错误的 escape 序列

`BadEscapeSequence`(§ 3.7)。inline 标量值或键中的 `\X` 形式,
其中 `X` 不是 `\`、`,`、`}`、`]`、`{`、`[`、`n`、`r`、`.`、`:`
之一,为 `BadEscapeSequence` 错误。反斜杠后紧随行末(即 `\` 与
行终止符之间无字节)亦为 `BadEscapeSequence` 错误 —— inline
标量上下文不跨越行边界(§ 3.2)。

### 6.14 顶层 inline 后的孤立行

出现在顶层 inline 复合值之后(§ 5.0.1 规则 2–3)或在 lone-`{` /
lone-`[` 根开启符(§ 5.0.1 规则 4–5)的匹配关闭行之后的非空白
非注释行 —— 此时根 Value 已被完全构建 —— 为
`OrphanLineAfterTopLevelInline` 错误。

该类别独立于 `MissingSeparator`(§ 6.6),因为根本不允许任何后续
内容,无论该后续行本应被解析为对、项或裸标量。错误 span SHOULD
指向 offending 行。

## 7. 示例

参见英文 `spec.md` § 7。

### 7.9 键 escape

```
example\.com: prod
a\:b: v
deep.example\.com: 1
path\\to: x
```

`example\.com` 是单个键 `example.com` —— `\.` 是字面点,不是路径分隔
符。`a\:b` 是键 `a:b`(字面冒号)。`deep.example\.com` 嵌套在
`deep` 下,叶键为 `example.com`(第一个点分割路径;escape 后的点
不分割)。`path\\to` 是键 `path\to` —— 字面反斜杠,写作 `\\`。规范
写入器在键段内会重新 escape `\`、`.` 和 `:`(§ 5.9.10),因此以上
所有形式都能 round-trip。

## 8. 合规性

实现可在以下一个或多个层级声明 **Ktav 0.6.4 兼容性**。

### 8.1 Parser-conforming

Parser-conforming 实现:

- 满足本文档所有与解析相关的规范性 MUST / MUST NOT 声明。
- 接受 `versions/0.6/tests/valid/` 下每个 fixture 并产生与
  对应 `name.json` 等价的 Value。
- 拒绝 `versions/0.6/tests/invalid/` 下每个 fixture,错误类别
  与 `name.json["expected_error"]` 一致。

### 8.2 Writer-conforming

Writer-conforming 实现:

- 满足 § 5.9 所有规范性 MUST / MUST NOT 声明。
- 对 `versions/0.6/tests/valid/` 下每个 fixture,在给定从
  `name.ktav` 解析的 Value 时,产生与 `name.canonical.ktav`
  字节相同的输出。

规范形式定义见 § 5.9。

### 8.3 Round-trip 性质

下式 MUST 对任何由 parser-conforming 实现产生的 Value V 成立
(由同 Value 域的 writer- 和 parser-conforming 实现执行):

```
emit_canonical(parse(emit_canonical(V))) == emit_canonical(V)
```

即:解析规范输出并再次输出产生字节相同的输出。规范形式是
parse-emit 循环的不动点。

### 8.4 声明

实现 MAY 仅声明 parser-、仅声明 writer- 或两者兼有。实现 MAY
并行支持旧版本(如 0.1.1),但无 version-pragma 时默认行为
SHOULD 为 0.6.4。

## 9. 安全考量

### 9.1 资源耗尽

实现 SHOULD 设可配置上限:嵌套深度、输入长度、标量长度、Value
总数。具体上限未指定。

### 9.2 数值溢出

超过实现所支持整数范围(MUST 至少为 i64;见 § 5.2 规则 13)的
整数 MUST 按 § 5.2 规则 13 回退为 String。

### 9.3 编码

输入 MUST 是有效 UTF-8。

## 10. 设计依据(非规范性)

参见英文 `spec.md` § 10。

## 11. 参考文献

RFC 2119、RFC 8174、RFC 3629、RFC 8259、TOML、YAML。

## 附录 A. 变更

### 0.6.0 —— 2026-06-01

- **破坏性:** 键现在处理 escape 序列(§ 3.7)。反斜杠 `\` 在键中
  为 escape 前导;`\.` 产生字面点(非路径分隔符);`\:` 产生字面冒
  号(非对分隔符);`\\` 产生字面反斜杠。0.5.0 中键内的字面反斜杠
  现在需要 `\\`。新增两个 escape 序列(`\.`、`\:`)至 § 3.7 表
  (共计十个)。
- **破坏性:** `<key>` / `<segment>` / `<key-char>` 语法产生式(§ 4)
  现在 escape 感知。点分路径分隔仅在**未 escape** 的 `.` 处进行;
  对分隔符为首个**未 escape** 的 `:` / `::`。反斜杠与点从
  `<key-char>` 中排除,改由 `<key-escape>` 处理。
- **变更:** § 3.7 escape 序列列表从八个扩展为十个:`\\`、`\,`、
  `\}`、`\]`、`\{`、`\[`、`\n`、`\r`、`\.`、`\:`。`\.` 与 `\:`
  不再是 `BadEscapeSequence`。
- **变更:** 从「escape 序列不在以下场景处理」列表(§ 3.7)中移除
  「键」。键现在处理 escape —— 与 inline 标量相同的集合。
- **变更:** § 5.9.10(规范键输出)—— writer MUST 对键段中的 `\`、
  `.` 与 `:` 重新 escape 以确保 round-trip。
- **变更:** § 6.13 `BadEscapeSequence` —— 更新为列出十个有效
  escape 字符(新增 `.` 与 `:`)。

### 0.5.0 —— 2026-05-28

- **Breaking:** 移除类型标记 `:i`/`:f`。
- **Breaking:** 注释改为 `##`(§ 3.4)。
- **Breaking:** 首条内容行单独的 `{` / `[` 现在为多行根
  Object / Array(§ 5.0.1 规则 4–5)。先前(0.1.1)此打开根级
  Array 内的单一 Object / Array 项;JSONL 式形式不再被接受。
- **Breaking:** Float Values 不再保留文本形式;应用数值规范化
  (§ 3.6、§ 5.2、§ 5.9.8)。
- **Breaking:** 键段修剪前后 ASCII 空白(§ 4)。
- **Breaking:** 不跟 `LF` 的单独 `CR` 字节为数据,非行终止符
  (§ 3.2)。
- **新增:** Inline 复合值(§ 5.8)。
- **新增:** 八个 escape 序列(§ 3.7)。
- **新增:** 数字字面量语法(§ 3.6)。
- **新增:** **规范形式(§ 5.9)** —— 每个 Value 的规范 writer
  输出,由 writer-conforming 实现使用,由 `*.canonical.ktav`
  fixture 验证。
- **新增:** **三元测试套件** —— 每个 valid fixture 有三个文件:
  `name.ktav`(输入)、`name.json`(Value oracle)、
  `name.canonical.ktav`(writer oracle)。
- **新增:** 错误 `UnterminatedInlineCompound`、
  `MalformedInlineCompound`、`BadEscapeSequence`
  (§ 6.11、§ 6.12、§ 6.13)。
- **新增:** 错误 `OrphanLineAfterTopLevelInline`(§ 6.14)作为
  独立类别,与 `MissingSeparator` 分开。
- **新增:** 附录 B —— 0.1.x → 0.5.0 迁移指南。
- **移除:** 错误类别 `InlineNonEmptyCompound`(§ 6.7)、
  `InvalidTypedScalar`(§ 6.9)。号码保留;实现 MUST NOT 对
  0.6.0 文档输出标签为此名称的错误。
- **变更:** Top-level kind detection(§ 5.0.1)扩展和重写。
- **变更:** 合规性(§ 8)拆分为 parser-conforming(§ 8.1)、
  writer-conforming(§ 8.2)与 round-trip 性质(§ 8.3)。

### 0.1.1 —— 2026-05-08

新增顶层 Array 作为可识别的根类型(§ 5.0.1)。

### 0.1.0 —— 2026-04-22

初始规范。

## 附录 B. 从 0.1.x 迁移

三个 breaking 变更需在 0.1.x 文档迁移到 0.5.0 时处理:

1. **类型标记移除。** 将 `:i 42` / `:f 3.14` 替换为裸的 `42` /
   `3.14`。若要保留为 String,使用 `:: 42`。
2. **注释使用 `##`。** 将 `# comment` 行替换为 `## comment`。
   0.5.0 中,行首单 `#` 无特殊含义。
3. **裸数字现在被类型化。** `port: 8080` 在 0.5.0 产生
   `Integer(8080)`,不再是 `String("8080")`。若消费方期望
   String,将源改为 `port:: 8080`。

第四个更窄的变更仅适用于利用 0.1.1 的 lone-`{` / lone-`[`
root-Array 形式的文档:

4. **首条内容行的单独 `{` / `[` 现在是根,不是单一 Array 项。**
   0.1.1 中,以单独 `{` 开始的文档产生含一个 Object 的根 Array;
   0.5.0 中,单独 `{` 直接打开根 Object。JSONL 式文档(多个 top-
   level 对象在相邻行)不再被接受;请用显式 `[` / `]` 包裹。

仅使用带引号风格的值、显式 String 形式(`key:: value`)与显式
数组括号的文档,在两个版本间大致兼容。

## 附录 C. 从 0.5.0 迁移

一个破坏性变更需在 0.5.0 文档迁移到 0.6.0 时处理:

1. **键中的反斜杠现为 escape 前导。** 0.5.0 中键内的反斜杠 `\`
   是字面字符;0.6.0 中 `\` 开始一个 escape 序列。若任何键含字面
   反斜杠,将 `\` 替换为 `\\`。实践中较罕见 —— 键名中的反斜杠在
   配置文件中并不常见。

此外,键现在可通过 `\.` 与 `\:` 包含字面点与冒号,从而表达诸如
`example.com` 或 `a:b` 之类先前无法表示的键名。
